# ai-invention-023b95-within-document-term-weighting-for-scien

./: README.md
chat/: README.md
chat/messages/: README.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/: paper.tex
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  references.bib  review_pages.py
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  data.py  dataset_report.json  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/evaluation-1/: README.md
round-1/evaluation-1/demo/: eval_code_demo.ipynb  mini_demo_data.json
round-1/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-1/evaluation-1/src/results/: detailed_results.json
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  preview_method_out.json  pyproject.toml  results_summary.json
round-2/evaluation-1/: README.md
round-2/evaluation-1/demo/: eval_code_demo.ipynb  mini_demo_data.json
round-2/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-2/research-1/: README.md
(+65 files in other folders)
