[project]
name = "tfisf-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets==2.21.0",
    "numpy==2.5.1",
    "scipy==1.18.0",
    "scikit-learn==1.9.0",
    "rank-bm25==0.2.2",
    "sentence-transformers==5.6.0",
    "loguru==0.7.3",
    "requests==2.34.2",
    "tqdm==4.69.0",
    "torch==2.13.0",
    "transformers==5.14.1",
    "tokenizers==0.22.2",
    "huggingface-hub==1.24.0",
    "pyarrow==25.0.0",
    "filelock==3.31.1",
    "packaging==26.2",
    "regex==2026.7.19",
    "safetensors==0.8.0",
    "dill==0.3.8",
    "multiprocess==0.70.16",
    "xxhash==3.8.1",
    "fsspec==2024.6.1",
    "aiohttp==3.14.1",
    "pandas==3.0.3",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.13.0%2Bcpu-cp312-cp312-linux_x86_64.whl" }
